   - Existing application data is being migrated automatically to SQLite on
     first application startup (XML files are not deleted for backup reasons)
   - The SQLite Export feature has been removed, as this is the default
 ExerciseViewer changes:
 - Garmin FIT parser: bugfix for handling laps without any speed data
   (when the lap contains just a break without any activity)

v7.9.1:
 Project changes:
 - Bugfix: section header labels are now using bold font again on macOS
 - Updated JavaFX / OpenJFX to version 19.0.2.1
   - contains critical bugfixes for Apple Silicon support (crashed before)
 - updated Kotlin to version 1.7.10
 - updated EasyDI to version 0.6.0
   - replaced outdated dependency javax.inject with new jakarta.inject
 - updated sqlite-jdbc to version 3.40.0
 - updated jdom2 to version 2.0.6.1
 - updated commons-cli to version 1.5.0
 - updated JUnit to version 5.8.2
 - updated Mockito to version 4.4.0
 SportsTracker changes:
 - SQLite Exporter:
   - table Exercise now uses the SportSubType and Equipment primary keys (ID)
     for referencing sport subtypes and equipments
   - columns SportSubType.SPORT_SUBTYPE_ID and Equipment.EQUIPMENT_ID are not
     needed anymore and were removed
   -> makes SQL queries a lot simpler and faster
   - added table Meta for storing database schema version and update timestamp
 - Entry Filter (Exercise, Note, Weight): added support for searching for
   multiple words in any order (AND logic, case-insensitive)
 - Automatic sport type and subtype mapping when importing Garmin FIT files
   - user configuration is needed for mapping the SportsTracker sport types and
     subtypes to the matching Garmin FIT sport types and subtypes (as displayed
     in ExerciseViewer)
   - Sport Type Dialog: added UI for mapping FIT sport types and subtypes
   - SQLite Exporter: added FIT ID columns to SportType and SportSubType tables
 ExerciseViewer changes:
 - updated Garmin FIT SDK library to version 21.94.0, provides bugfixes